--- a/frame/support/Cargo.toml
+++ b/frame/support/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4"
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 frame-metadata = { version = "12.0.0", default-features = false, path = "../metadata" }
+scale-info = { path = "../../../scale-info", package = "scale-info", default-features = false, features = ["derive"] }
 sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
 sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
 sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
@@ -44,6 +45,7 @@ default = ["std"]
 std = [
 	"once_cell",
 	"serde",
+	"scale-info/std",
 	"sp-io/std",
 	"codec/std",
 	"sp-std/std",
